corrected overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -234,7 +234,7 @@ div.search-form
 
 .grid-view h3 {float: left; margin-bottom: 0;}
 .form .note pre {display: inline; font: inherit; margin: 0;}
-.form .row {overflow: hidden;}
+.form .hint {overflow: auto;}
 code {white-space: pre;}
 .code {white-space: pre;}
 .view-title {height: 2.3em;}
@@ -253,3 +253,5 @@ code {white-space: pre;}
 .menu-sections .breadcrumbs {float:right;}
 
 .config-error { color: #000000; float: right; font-weight: bold; padding: 5px 10px; }
+
+.entity-details {overflow: auto;}
